Fix layout issues with social header + pagination

--- a/assets/scss/modules/_buddypress.scss
+++ b/assets/scss/modules/_buddypress.scss
@@ -20,7 +20,11 @@ select#bbm-media-privacy {
 
 	//Groups + members archive
 	#groups-list, #members-list {
+
 		font-size: 0;
+		.pagination a, .pagination button {
+		    display: inline-block;
+		}
 		.item-meta {
 			display: none;
 		}
@@ -41,6 +45,13 @@ select#bbm-media-privacy {
 			width: 50%;
 			padding: 1em;
 			margin-bottom: rem-calc(40);
+			.item-avatar {
+				img {
+					// override social avatar styles
+					float: none !important;
+					margin-right: 0 !important;
+				}
+			}
 		}
 		@include breakpoint(medium) {
 			li {
